--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2em;
-    display: block;
+    font-size: 6.5rem;
+    font-weight: bold;
     text-align: center;
+    margin: 0;
 }
+
+#clock-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+#clock
 
 .buttons {
     padding: 10px 20px;
@@ -14,6 +24,6 @@ body {
     transition: background-color 0.25s;
 }
 
-.buttons:hover{
+.buttons:hover {
     background-color: rgb(233, 140, 74);
 }
